--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: PhotoFolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <meta name="keywords" content="tm photography,TM PHOTOGRAPHY,TM Photography,Tm photography">
+  <meta name="robots" content="INDEX, FOLLOW">
+
+  
 </head>
 
 <body>
