--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>I'm <span>Md Mijanur Molla</span> a  Photographer from Newtown</h2>
+          <h2>I'm <span>Md Mijanur Molla</span> a  Photographer from Kolkata</h2>
           <p>Welcome to my profile.</p>
           <a href="contact.html" class="btn-get-started">Available for hire</a>
         </div>
