--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li class="dropdown"><a href="#"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <!-- <ul>
-              <li><a href="nature.html">Nature</a></li>
-              <li><a href="gallery.html">People</a></li>
+            <ul>
+              <li><a href="nature.html">Flowers</a></li>
+              <!-- <li><a href="gallery.html">People</a></li>
               <li><a href="gallery.html">Architecture</a></li>
               <li><a href="gallery.html">Animals</a></li>
               <li><a href="gallery.html">Sports</a></li>
@@ -64,9 +64,9 @@
                   <li><a href="#">Sub Menu 1</a></li>
                   <li><a href="#">Sub Menu 2</a></li>
                   <li><a href="#">Sub Menu 3</a></li>
-                </ul>
+                </ul> -->
               </li>
-            </ul> -->
+            </ul>
           </li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -315,10 +315,6 @@
         &copy; Copyright <strong><span>TM Photography</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
         Designed by BootstrapMade
       </div>
     </div>
