--- a/flowers.html
+++ b/flowers.html
@@ -271,7 +271,7 @@
       </div>
       <div class="credits">
         
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by BootstrapMade
       </div>
     </div>
   </footer><!-- End Footer -->
