--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="about.html">About</a></li>
           <li class="dropdown"><a href="#"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="nature.html">Flowers</a></li>
+              <li><a href="flowers.html">Flowers</a></li>
               <!-- <li><a href="gallery.html">People</a></li>
               <li><a href="gallery.html">Architecture</a></li>
               <li><a href="gallery.html">Animals</a></li>
